# test_dependabot

./: README.md  pyproject.toml  renovate.json  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
