[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
name = "my_dependancies"
version = "0.0.0"
dynamic = ["dependencies", "optional-dependencies"]
description = ""
requires-python = ">=3.8"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[project.scripts]
my_dependancies = "main:main"

